<resources>
    <string name="app_name">Easy Calculator</string>
    <string name="title_another_calc">Calculating in another activity</string>
    <string name="calcButton">calculate</string>
    <string name="numInput">input number</string>
    <string name="calcResultDefault">=result</string>
    <string name="calcResult">=%1$d</string>
    <string name="nextCalc">continue</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiply">×</string>
    <string name="division">÷</string>
    <string name="backButton">back</string>
</resources>
