<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.snakka.helloandroid.MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.constraint.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">


            <Button
                android:id="@+id/calcButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="262dp"
                android:text="@string/calcButton"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_constraintRight_creator="1"
                tools:layout_constraintTop_creator="1" />

            <Button

                android:id="@+id/calcButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:layout_marginRight="30dp"
                android:text="@string/calcButton"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@+id/numInput1"
                tools:layout_constraintRight_creator="1"
                tools:layout_constraintTop_creator="1" />

            <EditText
                android:id="@+id/numInput1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="80dp"
                android:ems="10"
                android:hint="@string/numInput"
                android:inputType="number"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/calcButton1"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_constraintLeft_creator="1"
                android:layout_marginEnd="8dp" />

            <EditText
                android:id="@+id/numInput2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="16dp"
                android:ems="10"
                android:hint="@string/numInput"
                android:inputType="number"
                app:layout_constraintBaseline_toBaselineOf="@+id/calcButton2"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/calcButton2"
                tools:layout_constraintBaseline_creator="1"
                tools:layout_constraintLeft_creator="1"
                android:layout_marginEnd="8dp"
                app:layout_constraintHorizontal_bias="1.0" />

            <Spinner
                android:id="@+id/operatorSelector"
                android:layout_width="87dp"
                android:layout_height="22dp"
                android:layout_marginBottom="37dp"
                android:layout_marginStart="69dp"
                android:layout_marginTop="8dp"
                android:entries="@array/operator"
                app:layout_constraintBottom_toTopOf="@+id/numInput2"
                app:layout_constraintTop_toBottomOf="@+id/numInput1"
                app:layout_constraintVertical_bias="0.773"
                tools:layout_constraintBottom_creator="1"
                tools:layout_constraintLeft_creator="1"
                tools:layout_constraintTop_creator="1"
                android:layout_marginLeft="69dp"
                app:layout_constraintLeft_toLeftOf="parent" />

            <Button
                android:id="@+id/nextCalc"
                android:layout_width="159dp"
                android:layout_height="48dp"
                android:layout_margin="76dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/nextCalc"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/calcButton2"
                tools:layout_constraintBottom_creator="1"
                tools:layout_constraintRight_creator="1"
                tools:layout_constraintTop_creator="1"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginEnd="76dp"
                android:layout_marginRight="76dp" />

            <TextView
                android:id="@+id/calcResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/calcResultDefault"
                android:textColor="#000000"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/nextCalc"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/calcButton2"
                app:layout_constraintVertical_bias="0.512"
                tools:layout_constraintBottom_creator="1"
                tools:layout_constraintLeft_creator="1"
                tools:layout_constraintRight_creator="1"
                tools:layout_constraintTop_creator="1" />

        </android.support.constraint.ConstraintLayout>
    </FrameLayout>
</ScrollView>
